# thoth-blueprint

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.ts
.github/: copilot-instructions.md  pull_request_template.md
artifact/: Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
crates/: README.md
crates/thoth-bindings/: Cargo.toml
crates/thoth-bindings/src/: geometry.rs  lib.rs
crates/thoth-bindings/tests/: geometry_wasm.rs
crates/thoth-civil/: Cargo.toml  GAPS.md  STATUS.md
crates/thoth-civil/src/: alignment.rs  assembly.rs  corridor.rs  error.rs  feature_lines_and_grading.rs  gis_and_3d_visualization.rs  grading.rs  helpers.rs  intersection.rs  labels_and_udp.rs  layout_templates.rs  lib.rs  network.rs  parcel_tables.rs  partbuilder.rs  pipedesign.rs  pointcloud.rs  profile.rs  sample_lines_and_sections.rs  scripts_and_3d_objects.rs  sections.rs  sheets_and_data_refs.rs  site_and_parcels.rs  superelevation.rs  terrain.rs  terrain_model.rs  view_frames_and_match_lines.rs
crates/thoth-civil/src/common/: geometry_helpers.rs  line_segment.rs  mod.rs  units.rs  vector.rs
crates/thoth-drawing/: Cargo.toml  GAPS.md  GAP_ANALYSIS_STATUS.md  STATUS.md
crates/thoth-drawing/src/: annotation.rs  bond.rs  builders.rs  collada.rs  default_set.rs  dimension.rs  drafting.rs  error.rs  hatch.rs  labeling.rs  lib.rs  noise.rs  photometric.rs  planproduction.rs  platset.rs  qto.rs  redline.rs  scene.rs  schedule.rs  sheet.rs  sheetsize.rs  sheetview.rs  signage.rs  staking.rs  stamp.rs  submittal.rs  sun.rs  viewshed.rs
crates/thoth-drawing/src/common/: format.rs  mod.rs  units.rs  vector.rs
crates/thoth-drawing/src/parts/: data.rs  mod.rs  registry.rs  types.rs
crates/thoth-drawing/src/parts/data/: civil.json  drawing.json  lumber.json  survey.json
crates/thoth-governance/: Cargo.toml  STATUS.md
crates/thoth-governance/src/: audit.rs  diff.rs  error.rs  lib.rs  redline.rs  rules.rs  sharing.rs  will_serve.rs
crates/thoth-hydrology/: Cargo.toml  STATUS.md
crates/thoth-hydrology/src/: credit.rs  culvert.rs  curve_number.rs  error.rs  floodplain.rs  hgl.rs  hydrograph.rs  lib.rs  lid.rs  outlet_hydraulics.rs  pond_routing.rs  rainfall.rs  rational.rs  time_of_concentration.rs  water_quality.rs  watershed.rs
crates/thoth-interop/: Cargo.toml  STATUS.md
crates/thoth-interop/src/: datum.rs  dxf.rs  error.rs  fieldbook.rs  ifc.rs  kml.rs  lib.rs  network_adjustment.rs  parcel_fabric.rs  pointcloud_classify.rs  rinex.rs  shapefile.rs  staking.rs  xml_tree.rs  zip_store.rs
crates/thoth-interop/src/landxml/: alignments.rs  convert.rs  mod.rs  parcels.rs  pipe_networks.rs  points.rs  surfaces.rs
crates/thoth-napi/: Cargo.toml
crates/thoth-napi/src/: auth.rs  collaboration.rs  lib.rs  registry.rs  storage.rs
crates/thoth-planning/: Cargo.toml  GAPS.md  GAP_ANALYSIS_STATUS.md  GAP_CLOSE_STATUS.md  STATUS.md
crates/thoth-planning/src/: building.rs  canopy.rs  civil_stub.rs  common.rs  curtainwall.rs  curve.rs  dedication.rs  doorwindow.rs  element_factory.rs  element_meta.rs  elements.rs  envelope_fit.rs  erosion.rs  federal_data.rs  geotech.rs  grading_optimizer.rs  impact_fees.rs  land_use.rs  landlot.rs  lib.rs  lot_yield.rs  metrics.rs  open_space.rs  phasing.rs  plat.rs  regions.rs  renovation.rs  road_network.rs  roof.rs  rules.rs  search.rs  stairs.rs  subdivision.rs  utility_clash.rs  variance.rs  vertex.rs
crates/thoth-planning/src/geoid/: adapter.rs  compliance.rs  mod.rs  presets.rs  registry.rs  types.rs  utils.rs
crates/thoth-planning/src/geoid/data/: ca_la_county.json  ca_state.json  ga_state.json  tx_harris_county.json  tx_harris_pasadena_cousub.json  va_pwc_county.json  va_state.json
crates/thoth-planning/src/smart/: geometry.rs  mod.rs  structural.rs  subdivision.rs  types.rs
crates/thoth-services/: Cargo.toml  STATUS.md
crates/thoth-services/src/: lib.rs
crates/thoth-services/src/auth/: error.rs  mod.rs  password.rs  service.rs  types.rs
crates/thoth-services/src/collaboration/: error.rs  hub.rs  mod.rs  types.rs
crates/thoth-services/src/geospatial/: error.rs  interop.rs  mod.rs  projections.rs
crates/thoth-services/src/projects/: error.rs  mod.rs  service.rs  store.rs  types.rs
crates/thoth-services/src/storage/: adapter.rs  contract_tests.rs  create.rs  error.rs  memory.rs  mod.rs  postgres.rs  sqlite.rs  types.rs
crates/thoth-spatial/: Cargo.toml
crates/thoth-spatial/src/: geometry.rs  id.rs  lib.rs  types.rs  units.rs
crates/thoth-survey/: Cargo.toml  GAPS.md  STATUS.md
crates/thoth-survey/src/: advanced_linework.rs  bearing.rs  controls.rs  curve.rs  description_keys.rs  error.rs  fmt_utils.rs  lib.rs  monument.rs  plss.rs  points.rs  survey.rs  transparent_commands.rs
crates/thoth-survey/src/helpers/: alignment_report.rs  assembly_builder.rs  corridor.rs  grading.rs  metes_and_bounds.rs  mod.rs  pipe.rs  plat_drawing.rs  plat_report.rs  profile.rs  subdivision.rs  superelevation.rs
crates/thoth-transportation/: Cargo.toml  STATUS.md
crates/thoth-transportation/src/: ada_route.rs  design_speed_policy.rs  design_vehicle.rs  error.rs  horizontal_curve_policy.rs  lib.rs  pavement.rs  roundabout.rs  sight_distance.rs  signal_warrant.rs  superelevation_policy.rs  swept_path.rs  trip_generation.rs  turnaround.rs  turning_template.rs  vertical_curve_design.rs
docs/: ARCHITECTURE.md  CAD-SHEET-SETS.md  COMPETITIVE_GAP_ANALYSIS.md  GLOSSARY.md  MIGRATION.md  ROADMAP.md  RUST_MIGRATION.md  VISION.md
public/: whats-new.md
requirements/: chapter_10.txt  chapter_11.txt  chapter_13.txt  chapter_14.txt  chapter_15.txt  chapter_19.txt  chapter_2.txt  chapter_20.txt  chapter_21.txt  chapter_22.txt  chapter_24.txt  chapter_25.txt  chapter_26.txt  chapter_27.txt  chapter_28.txt  chapter_29.txt  chapter_3.txt  chapter_30.txt  chapter_31.txt  chapter_32.txt  chapter_33.txt  chapter_34.txt  chapter_35.txt  chapter_36.txt  chapter_37.txt  chapter_38.txt  chapter_39.txt  chapter_4.txt  chapter_40.txt  (+119 more)
(+513 files in other folders)
