[workspace]
resolver = "2"
members = [
    "crates/thoth-spatial",
    "crates/thoth-planning",
    "crates/thoth-survey",
    "crates/thoth-civil",
    "crates/thoth-drawing",
    "crates/thoth-services",
    "crates/thoth-bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false
rust-version = "1.82"

[workspace.dependencies]
thoth-spatial = { path = "crates/thoth-spatial" }
thoth-planning = { path = "crates/thoth-planning" }
thoth-survey = { path = "crates/thoth-survey" }
thoth-civil = { path = "crates/thoth-civil" }
thoth-drawing = { path = "crates/thoth-drawing" }
thoth-services = { path = "crates/thoth-services" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
