[package]
name = "thoth-bindings"
description = "WASM (wasm-bindgen) and native Node (napi-rs) binding surface exposing the Thoth Blueprint Rust core to apps/web and services/*."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thoth-spatial = { workspace = true }
thoth-planning = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
