[package]
name = "thoth-civil"
description = "Civil engineering domain logic for Thoth Blueprint. Rust port of packages/domain/src/civil."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
