[package]
name = "thoth-governance"
description = "Regulatory compliance, review governance, and collaboration workflow for Thoth Blueprint: parametric zoning rule engine, plan versioning/comparison, redline resolution, audit trail, and public-engagement sharing."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
thoth-planning = { workspace = true }
thoth-services = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
