[package]
name = "thoth-planning"
description = "Planning primitives and rules for Thoth Blueprint (Site, Parcel, Lot, Zone, LandUse, subdivision, setbacks, metrics). Rust port of packages/domain/src/planning and src/smart."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
thoth-survey = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
