[package]
name = "thoth-services"
description = "Native backend services for Thoth Blueprint (auth, projects, geospatial, collaboration, storage). Rust port of services/* and packages/storage."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
