[package]
name = "thoth-services"
description = "Native backend services for Thoth Blueprint (auth, projects, geospatial, collaboration, storage). Rust port of services/* and packages/storage."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Pinned below rusqlite 0.35 / libsqlite3-sys 0.31: newer libsqlite3-sys
# releases' build.rs use the unstable `cfg_select!` macro, which this
# workspace's pinned stable toolchain (see rust-toolchain.toml) rejects.
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
tempfile = "3"
