[package]
name = "thoth-survey"
description = "Survey/PLSS domain logic for Thoth Blueprint. Rust port of packages/domain/src/survey."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
thoth-civil = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
