[package]
name = "thoth-transportation"
description = "Transportation and traffic engineering for Thoth Blueprint: AASHTO geometric design checks, turning/swept-path analysis, trip generation, cul-de-sac/roundabout geometry, pavement design, and traffic-control compliance."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
thoth-spatial = { workspace = true }
thoth-civil = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
